tests/good/interpret/004-var.clap
val x = 42
val y = x
