tests/bad/interpret/008-app-true.clap
val t = True
val x = t 42

